git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17427 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: a46c2b0161ebe7a59ae990652c48a1f03112bdfc

--- a/kompren_projects/org.kermeta.kompren.slicer.texteditor/plugin.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.texteditor/plugin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
+
 <plugin>
    <extension point="org.eclipse.ui.newWizards">
       <category
@@ -16,16 +17,14 @@
       </wizard> 
    </extension>
    
-   <extension
-         point="org.eclipse.ui.editors">
+   <extension point="org.eclipse.ui.editors">
       <editor
+      		id="org.kermeta.kompren.texteditor.editors.KomprenEditorID"
             name="Kompren Textual Editor"
-            extensions="komprent"
             icon="icons/sample.gif"
-            contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
+            extensions="komprent"
             class="org.kermeta.kompren.texteditor.editors.KomprenEditor"
-            id="org.kermeta.kompren.texteditor.editors.KomprenTextualEditor">
+            contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor">
       </editor>
    </extension>
-
 </plugin>
