--- a/kompren_projects/org.kermeta.kompren.slicer.texteditor/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.texteditor/pom.xml
@@ -61,175 +61,147 @@
     </plugins>
   </build>
   <dependencies>
-    <dependency>
-      <groupId>org.kermeta.emf</groupId>
-      <artifactId>emf.lib</artifactId>
-      <version>${emf.version}</version>
-    </dependency>
-    <dependency>
+     <dependency>
         <groupId>org.kermeta.kompren</groupId>
         <artifactId>kompren.slicer.parser</artifactId>
         <version>${kompren.version}</version>
     </dependency>
-    <dependency>
-        <groupId>org.kermeta.kompren</groupId>
-        <artifactId>kompren.slicer.model</artifactId>
-        <version>${kompren.version}</version>
-    </dependency>
-		<dependency>
-			<groupId>org.kermeta.utils</groupId>
-			<artifactId>utils.systemservices.api</artifactId>
-			<version>${kermeta.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.utils</groupId>
-			<artifactId>utils.systemservices.eclipse</artifactId>
-			<version>${kermeta.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui.workbench</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui.editors</artifactId>
-			<version>[3.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui.ide</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.jface</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.jface.text</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.text</artifactId>
-			<version>[3.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.swt</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui.workbench.texteditor</artifactId>
-			<version>[3.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui.views</artifactId>
-			<version>[3.4.1.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.core.runtime</artifactId>
-			<version>[3.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.core.commands</artifactId>
-			<version>[3.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.core.expressions</artifactId>
-			<version>[3.4.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.core.resources</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.core.jobs</artifactId>
-			<version>[3.4.100.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.debug.ui</artifactId>
-			<version>[3.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.equinox.common</artifactId>
-			<version>[3.5.1.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.equinox.registry</artifactId>
-			<version>[3.4.100.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.emf</groupId>
-			<artifactId>emf.lib</artifactId>
-      <version>${emf.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.emf.common.ui</artifactId>
-			<version>[2.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.emf.edit</artifactId>
-			<version>[2.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.emf.edit.ui</artifactId>
-			<version>[2.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.emf.ecore.edit</artifactId>
-			<version>[2.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.emf.ecore</artifactId>
-			<version>[2.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.core</artifactId>
-			<version>${osgi.version}</version>
-		</dependency>
-	    <dependency>
-	      <groupId>org.emftext.commons</groupId>
-	      <artifactId>commons.antlr3_3_0</artifactId>
-	      <version>1.0.0</version>
-	    </dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.equinox.preferences</artifactId>
-			<version>[3.2.301.0,)</version>
-		</dependency>
-		<dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.emf.workspace</artifactId>
+		<version>[1.4.0.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.ui</artifactId>
+		<version>[3.6.1.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.ui.ide</artifactId>
+		<version>[3.6.1.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.ui.editors</artifactId>
+		<version>[3.6.1.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.jface.text</artifactId>
+		<version>[3.6.1.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.osgi</artifactId>
+		<version>[3.6.2.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.core.runtime</artifactId>
+		<version>[3.6.0.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.swt</artifactId>
+		<version>[3.6.2.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
+		<version>[3.6.2.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.equinox.common</artifactId>
+		<version>[3.6.0.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.core.jobs</artifactId>
+		<version>[3.5.1.0,)</version>
+	</dependency>	
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.equinox.registry</artifactId>
+		<version>[3.5.0.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.equinox.preferences</artifactId>
+		<version>[3.3.0.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.core.resources</artifactId>
+		<version>[3.6.1.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.core.commands</artifactId>
+		<version>[3.6.0.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.emf.edit</artifactId>
+		<version>[2.6.0.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.emf.ecore</artifactId>
+		<version>[2.6.1.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.jface</artifactId>
+		<version>[3.6.1.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.ui.workbench</artifactId>
+		<version>[3.6.1.0,)</version>
+	</dependency>
+	<dependency>
       <groupId>org.kermeta.eclipse</groupId>
       <artifactId>org.eclipse.core.filebuffers</artifactId>
       <version>[3.5.100.0,)</version>
     </dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.text</artifactId>
+		<version>[3.5.0.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.ui.views</artifactId>
+		<version>[3.5.0.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.ui.workbench.texteditor</artifactId>
+		<version>[3.6.1.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.utils</groupId>
+		<artifactId>utils.systemservices.api</artifactId>
+		<version>${kermeta.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.utils</groupId>
+		<artifactId>utils.systemservices.eclipse</artifactId>
+		<version>${kermeta.version}</version>
+	</dependency>
+		
+	<!--	
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>com.ibm.icu</artifactId>
+		<version>[4.2.1.0,)</version>
+	</dependency>
+	<dependency>
+		<groupId>org.kermeta.eclipse</groupId>
+		<artifactId>org.eclipse.jface.text.source</artifactId>
+		<version>[3.6.1.0,)</version>
+	</dependency> -->
   </dependencies>
 </project>
