--- a/kompren_projects/org.kermeta.kompren.slicer.texteditor/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.texteditor/pom.xml
@@ -49,25 +49,25 @@
                         <Bundle-SymbolicName>org.kermeta.kompren.slicer.texteditor;singleton:=true</Bundle-SymbolicName>
                         <Bundle-Activator>org.kermeta.kompren.texteditor.Activator</Bundle-Activator>
 						<Require-Bundle>
-			org.eclipse.emf.workspace,
-			org.eclipse.core.runtime,
-			org.eclipse.osgi,
-			org.eclipse.core.jobs,
-			org.eclipse.equinox.preferences,
-			org.eclipse.core.resources,
-			org.eclipse.core.commands,
-			org.eclipse.emf.edit,
-			org.eclipse.emf.ecore,
-			org.eclipse.ui,
-			org.eclipse.swt,
-			org.eclipse.jface,
-			org.eclipse.ui.workbench,
-			org.eclipse.ui.ide,
+			org.eclipse.emf.workspace;bundle-version="1.5.1",
+			org.eclipse.core.runtime;bundle-version="3.6.0",
+			org.eclipse.osgi;bundle-version="3.6.2",
+			org.eclipse.core.jobs;bundle-version="3.5.1",
+			org.eclipse.equinox.preferences;bundle-version="3.3.0",
+			org.eclipse.core.resources;bundle-version="3.6.1",
+			org.eclipse.core.commands;bundle-version="3.6.0",
+			org.eclipse.emf.edit;bundle-version="2.6.0",
+			org.eclipse.emf.ecore;bundle-version="2.6.1",
+			org.eclipse.ui;bundle-version="3.6.2",
+			org.eclipse.swt;bundle-version="3.6.2",
+			org.eclipse.jface;bundle-version="3.6.2",
+			org.eclipse.ui.workbench;bundle-version="3.6.2",
+			org.eclipse.ui.ide;bundle-version="3.6.2",
 			org.eclipse.ui.editors;bundle-version="3.6.1",
-			org.eclipse.core.filebuffers,
+			org.eclipse.core.filebuffers;bundle-version="3.5.100",
 			org.eclipse.jface.text;bundle-version="3.6.1",
-			org.eclipse.ui.views,
-			org.eclipse.ui.workbench.texteditor,
+			org.eclipse.ui.views;bundle-version="3.5.1",
+			org.eclipse.ui.workbench.texteditor;bundle-version="3.6.1",
 			org.kermeta.kompren.slicer.parser
                         </Require-Bundle>
                         <Export-Package>
