--- a/kompren_projects/org.kermeta.kompren.slicer.texteditor/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.texteditor/pom.xml
@@ -68,6 +68,8 @@
 			org.eclipse.jface.text;bundle-version="3.6.1",
 			org.eclipse.ui.views;bundle-version="3.5.1",
 			org.eclipse.ui.workbench.texteditor;bundle-version="3.6.1",
+			org.kermeta.utils.systemservices.api,
+			org.kermeta.utils.systemservices.eclipse,
 			org.kermeta.kompren.slicer.parser
                         </Require-Bundle>
                         <Export-Package>
