git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17458 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: e8f03ac1906db663300506cdd5605947a3d13994

--- a/kompren_projects/org.kermeta.kompren.slicer.edit/plugin.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.edit/plugin.xml
@@ -19,5 +19,28 @@
                org.eclipse.emf.edit.provider.IItemLabelProvider
                org.eclipse.emf.edit.provider.IItemPropertySource"/>
    </extension>
+   <extension
+         point="org.eclipse.ui.popupMenus">
+      <objectContribution
+            id="kompren.slicer.edit.contribution1"
+            objectClass="org.eclipse.core.resources.IFile">
+         <menu
+               id="kompren.slicer.edit.menu1"
+               label="Kompren"
+               path="additions">
+            <separator
+                  name="group1">
+            </separator>
+         </menu>
+         <action
+               class="kompren.slicer.edit.popup.actions.CreateKomprentFilesAction"
+               enablesFor="+"
+               id="kompren.slicer.edit.newAction"
+               label="Create komprent file"
+               menubarPath="kompren.slicer.edit.menu1/group1"
+               tooltip="Creates komprent files from the selected kompren ones.">
+         </action>
+      </objectContribution>
+   </extension>
 
 </plugin>
