git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17480 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 2b599b32866c5f3899872e1a9906ed5231eccf3a

--- a/kompren_projects/org.kermeta.kompren.slicer.edit/plugin.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.edit/plugin.xml
@@ -35,10 +35,18 @@
          <action
                class="kompren.slicer.edit.popup.actions.CreateKomprentFilesAction"
                enablesFor="+"
-               id="kompren.slicer.edit.newAction"
+               id="kompren.slicer.edit.convertAsTextAction"
                label="Create komprent file"
                menubarPath="kompren.slicer.edit.menu1/group1"
-               tooltip="Creates komprent files from the selected kompren ones.">
+               tooltip="Creates komprent files from the selected kompren models.">
+         </action>
+         <action
+               class="kompren.slicer.edit.popup.actions.CreateKomprentModelsAction"
+               enablesFor="+"
+               id="kompren.slicer.edit.convertAsModelAction"
+               label="Create kompren file"
+               menubarPath="kompren.slicer.edit.menu1/group1"
+               tooltip="Creates kompren models from the selected komprent files.">
          </action>
       </objectContribution>
    </extension>
