--- a/kompren_projects/org.kermeta.kompren.slicer.edit/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.edit/pom.xml
@@ -68,6 +68,11 @@
         </dependency>
         <dependency>
             <groupId>org.kermeta.kompren</groupId>
+            <artifactId>kompren.slicer.parser</artifactId>
+            <version>${kompren.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kermeta.kompren</groupId>
             <artifactId>kompren.slicer.model</artifactId>
             <version>${kompren.version}</version>
         </dependency>
